--- a/package.json
+++ b/package.json
@@ -1,44 +1,57 @@
 {
-  "name": "widget-reservation",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "material-design-icons-iconfont": "^3.0.3",
-    "vue": "^2.5.16",
-    "vuetify": "^1.0.17"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.9",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
-    "@vue/cli-service": "^3.0.0-beta.9",
-    "vue-template-compiler": "^2.5.13"
-  },
-  "babel": {
-    "presets": [
-      "@vue/app"
+    "name": "widget-reservation",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint",
+        "test": "mocha-webpack --webpack-config webpack.config.js --require test/setup.js test/**/*.spec.js"
+    },
+    "dependencies": {
+        "babel-polyfill": "^6.26.0",
+        "material-design-icons-iconfont": "^3.0.3",
+        "vue": "^2.5.16",
+        "vue-router": "^3.0.1",
+        "vuetify": "^1.0.17"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^3.0.0-beta.9",
+        "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
+        "@vue/cli-service": "^3.0.0-beta.9",
+        "@vue/test-utils": "^1.0.0-beta.15",
+        "expect": "^22.4.3",
+        "jsdom": "^11.10.0",
+        "jsdom-global": "^3.0.2",
+        "laravel-mix": "^2.1.11",
+        "mocha": "^5.1.1",
+        "mocha-webpack": "^1.1.0",
+        "sinon": "^5.0.3",
+        "vue-loader": "^14.*",
+        "vue-template-compiler": "^2.5.13",
+        "webpack": "3.7.*",
+        "webpack-node-externals": "^1.7.2"
+    },
+    "babel": {
+        "presets": [
+            "@vue/app"
+        ]
+    },
+    "eslintConfig": {
+        "root": true,
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ]
+    },
+    "postcss": {
+        "plugins": {
+            "autoprefixer": {}
+        }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
     ]
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ]
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
 }
