--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "test": "mocha-webpack --webpack-config webpack.config.js --require test/setup.js test/**/*.spec.js"
     },
     "dependencies": {
+        "@websanova/vue-auth": "^2.21.10-beta",
         "axios": "^0.18.0",
         "babel-polyfill": "^6.26.0",
         "material-design-icons-iconfont": "^3.0.3",
